# 2026_SUML_Team02

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  presentation.pptx  pyproject.toml  requirements.txt  run_project.bat
models/: car_price_model.joblib  feature_options.json  model_metadata.json  training_metrics.json
notebooks/: car_price_eda_model_selection.ipynb
src/car_price_prediction/: __init__.py  config.py  devtools.py  feature_options.py  logging_config.py  pipeline.py  schemas.py
src/car_price_prediction/app/: api.py  bootstrap.py  forms.py  main.py
src/car_price_prediction/app/static/: styles.css
src/car_price_prediction/app/templates/: index.html
src/car_price_prediction/data/: __init__.py  download.py  preprocessing.py
src/car_price_prediction/model/: __init__.py  feature_names.py  predict.py  train.py
src/data/: preprocessing.py
src/model/: train.py
tests/: test_app.py  test_bootstrap.py  test_config.py  test_devtools.py  test_download.py  test_forms.py  test_pipeline.py  test_prediction.py  test_preprocessing.py  test_training.py
